samples/_failures_safe/1761718477_3319c1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4fdee6b4.c: In function ‘main’:
./samples/SAFE/__tmp_4fdee6b4.c:148:5: error: expected declaration or statement at end of input
  148 |     if (strcmp(filter, "ALL") != 0) {
      |     ^~
./samples/SAFE/__tmp_4fdee6b4.c:148:5: error: expected declaration or statement at end of input
